# transientlab_app_qt6

./: CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  serial_connection.cpp  serial_connection.h  transientlab_app_en_PL.ts
